<resources>
    <string name="app_name">AndroidTutorials</string>
    
    <string name="label_hello_world">Hello World!</string>
    <string name="label_press_me">Press Me</string>
    <string name="label_press_me_desc">The User Pressed Me</string>

    <!--Slot App text-->
    <string name="label_slot_machine">Slot Machine</string>
    <string name="label_slot_play">Play</string>
    <string name="label_slot_first">1</string>
    <string name="label_slot_second">2</string>
    <string name="label_slot_third">3</string>

    <!-- Price App text -->
    <!-- Hint text for editable text field where the user enters the price of product -->
    <string name="label_price_calculator">Price Calculator</string>
    <string name="cost_of_product">Cost of Product</string>
    <!-- Question prompt for the group of radio buttons with different discount options -->
    <string name="which_discount_coupon">Which discount coupon?</string>
    <!-- Discount Shareholders - 20%   -->
    <string name="discount_for_company_shareholders">Shareholders (25%)</string>
    <!-- Discount Frequent Customer - 18%  -->
    <string name="discount_for_frequent_customers">Frequent Customer (20%)</string>
    <!-- Discount Regular Customer - 15%   -->
    <string name="discount_for_regular_customers">Regular Customer (15%)</string>
    <!-- Text label for toggle switch that asks the user if they want to round up the discount  -->
    <string name="round_up_discount">Round up discount?</string>
    <!-- Label for button that calculates the discount  -->
    <string name="calculate">Calculate</string>
    <!-- Formatted string for the  price  -->
    <string name="final_price">Price After Discount: </string>

    <!-- Quiz App text-->
    <string name="label_quiz_app">Quiz</string>
    <string name="title_quiz_question">Quiz Question (%1$d/%2$d)</string>
    <string name="submit_button">Submit</string>

    <!-- StopWatch App Text-->
    <string name="label_runner_app">Runner</string>
    <string name="label_stop_watch_start_timer">Start Timer</string>
    <string name="label_stop_watch_stop_timer">Stop Timer</string>

    <!-- Drawer Layout-->
    <string name="label_drawer_open">Drawer Open</string>
    <string name="label_drawer_close">Drawer Close</string>

    <!--Options Menu Label-->
    <string name="label_options_menu_about">About</string>
    <string name="label_options_menu_contacts">Contacts</string>

    <!--Notes App String-->
    <string name="label_notes_app">Notes</string>
    <string name="label_new_notes">New Notes</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="add_word">Add word</string>

    <!--Quotes App String-->
    <string name="label_quotes_app">Quotes</string>
    <string name="label_tap_to_new_quotes">Tap to see new Quotes!</string>

    <!--Plants App String-->
    <string name="label_plants_app">Plants</string>
    <string name="label_filter_zone">Filter Zone</string>
    <string name="label_no_filter_zone">No Filter Zone</string>

    <!--Foto App String-->
    <string name="label_foto_app">Foto</string>
    <!-- Titles -->
    <string name="blur_title">Select Blur Amount</string>

    <!-- Buttons -->
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_image">See Image</string>

    <!-- Content descriptions -->
    <string name="description_image">The image to blur and save.</string>

    <!-- Blur levels -->
    <string name="blur_lv_1">Blur Level 1</string>
    <string name="blur_lv_2">Blur Level 2</string>
    <string name="blur_lv_3">Blur Level 3</string>
    <string name="cancel_work">Cancel Work</string>

    <!-- Messages -->
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>

    <!-- WORK MANAGER -->

</resources>