<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="price" type="Double"/>
    </data>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

        <ImageView
                android:id="@+id/icon_cost_of_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/cost_of_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cost_of_product"
                app:srcCompat="@drawable/ic_store" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_of_product"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:hint="@string/cost_of_product"
                app:layout_constraintStart_toEndOf="@id/icon_cost_of_product"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_product_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/service_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_question"
                app:srcCompat="@drawable/ic_discount" />

        <TextView
                android:id="@+id/service_question"
                style="@style/Widget.Price.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/which_discount_coupon"
                app:layout_constraintStart_toStartOf="@id/cost_of_product"
                app:layout_constraintTop_toBottomOf="@id/cost_of_product" />

        <RadioGroup
                android:id="@+id/discount_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/option_twenty_percent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/service_question"
                app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                    android:id="@+id/option_twenty_five_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_for_company_shareholders" />

            <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_for_frequent_customers" />

            <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_for_regular_customers" />

        </RadioGroup>

        <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toBottomOf="@id/round_up_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/round_up_switch"
                app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/round_up_discount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/discount_options"
                app:layout_constraintTop_toBottomOf="@id/discount_options" />

        <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/round_up_switch"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

        <TextView
                android:id="@+id/price_result"
                style="@style/Widget.Price.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"
                android:text="@{@string/final_price + price}"
                tools:text="Price : $10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
